# kurayashiki

./: Anchor.toml
app/: package-lock.json  package.json
app/src/: airdrop.ts  devnet_kurayashiki.ts  kurayashiki_demo.html
programs/kurayashiki/: Cargo.toml
programs/kurayashiki/src/: lib.rs
tests/: kurayashiki.ts
