[package]
name = "kurayashiki"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "kurayashiki"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
solana-program = "1.9.5"
spl-token = { version = "3.2", features = [ "no-entrypoint" ] }
spl-associated-token-account = "1.0.3"
pyth-client = "0.2.2"